# Code-Wars

./: HaskellSpecificKata.hs  NumbersAlgorithmsKata.hs  ParserAndCipherKata.hs  Permutations.lhs  README.md  RomanNumbersKata.hs  StringAlgorithmsKata.hs  code-wars.cabal
Combinatorics Kata/: BestTravel.hs  Combinations.hs  FindTheSmallest.hs  Permutations.hs  TheObservedPIN.hs
Haskell-specific Kata/: AlgebraicIsomorphism.hs  FiveFundamentalMonads.hs  FixIt.hs  FoldMapAllTheThings.hs  FunctionalStreams.hs  Isomorphism.hs
Number Kata/: HappyNumbers.hs  LastDigitOfLargeNumber.hs  PascalsTriangle.hs  PerimeterOfSquaresInRectangle.hs  ProductOfConsecutiveFibs.hs  WeightForWeight.hs
String Kata/: CaesarCipherSorting.hs  ConvertStringtoCamelCase.hs  DecodeTheMorseCode.hs  DetectPangram.hs  ISBN10Validation.hs  Largest5DigitNumberInSeries.hs  LongestCommonSubsequence.hs  RomanNumeralsDecoder.hs  RomanNumeralsEncoder.hs  SecretStringFromRandomTriplets.hs  ValidBraces.hs
app/: Main.hs
src/: CombinatoricsKata.hs  HaskellKata.hs  NumberKata.hs  StringKata.hs
src/combinatorics-kata/: BestTravel.hs  Combinations.hs  FindTheSmallest.hs  Permutations.hs  TheObservedPIN.hs
src/haskell-kata/: AlgebraicIsomorphism.hs  FiveFundamentalMonads.hs  FixIt.hs  FoldMapAllTheThings.hs  FunctionalStreams.hs  Isomorphism.hs
src/number-kata/: DeleteNth.hs  HappyNumbers.hs  LastDigitOfLargeNumber.hs  PascalsTriangle.hs  PerimeterOfSquaresInRectangle.hs  ProductOfConsecutiveFibs.hs  WeightForWeight.hs
src/string-kata/: CaesarCipherSorting.hs  ConvertStringToCamelCase.hs  DecodeTheMorseCode.hs  DetectPangram.hs  ISBN10Validation.hs  Largest5DigitNumberInSeries.hs  LongestCommonSubsequence.hs  RangeExtraction.hs  RomanNumeralsDecoder.hs  RomanNumeralsEncoder.hs  SecretStringFromRandomTriplets.hs  ValidBraces.hs
