name:                code-wars
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/code-wars#readme
license:             BSD3
license-file:        LICENSE
author:              Eugen Wybitul
maintainer:          wybitul.evzen@gmail.com
copyright:           2017 Eugen Wybitul
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
                     , src/combinatorics-kata
                     , src/haskell-kata
                     , src/string-kata
                     , src/number-kata
  exposed-modules:     CombinatoricsKata
                     , StringKata
                     , HaskellKata
                     , NumberKata
  other-modules:       BestTravel
                     , Combinations
                     , FindTheSmallest
                     , Permutations
                     , TheObservedPIN
                     , DecodeTheMorseCode
                     , AlgebraicIsomorphism
                     , FiveFundamentalMonads
                     , FixIt
                     , FoldMapAllTheThings
                     , Isomorphism
                     , HappyNumbers
                     , LastDigitOfLargeNumber
                     , PascalsTriangle
                     , PerimeterOfSquaresInRectangle
                     , ProductOfConsecutiveFibs
                     , WeightForWeight
                     , DecodeTheMorseCode
                     , CaesarCipherSorting
                     , ConvertStringToCamelCase
                     , DetectPangram
                     , ISBN10Validation
                     , Largest5DigitNumberInSeries
                     , LongestCommonSubsequence
                     , RangeExtraction
                     , RomanNumeralsDecoder
                     , RomanNumeralsEncoder
                     , SecretStringFromRandomTriplets
                     , ValidBraces
  build-depends:       base >= 4.7 && < 5
                     , split
                     , containers
  default-language:    Haskell2010

executable code-wars-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , code-wars
  default-language:    Haskell2010

test-suite code-wars-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , code-wars
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/code-wars
